feat(hooks): implement CommitValidator with dependency injection
Add comprehensive commit message validation with testable architecture:

- Create GitRunner interface for git operations abstraction
- Implement RealGitRunner for production use
- Implement MockGitRunner for unit tests (no real git commands)
- Add CommitValidator with message validation logic
- Validate commit flags (-sS required)
- Validate staging area (files staged or -a/-A flag)
- Validate conventional commit format
- Block feat(ci), fix(test), feat(docs), fix(docs), etc.
- Validate body line lengths (≤77 chars with tolerance)
- Validate list formatting (empty line before first item)
- Block PR references (#123 or URLs)
- Block Claude AI references
- Optional signoff validation (configurable at build time)

Configuration:
- ExpectedSignoff set via ldflags at build time
- task build:prod uses git config user.name/email

Refactoring:
- Update AddValidator to use GitRunner DI
- Create single test suite for all git validators
- Add test coverage: 25/57 tests passing

Tests use MockGitRunner to avoid executing real git commands.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -11,9 +11,28 @@ tasks:
       - task --list
 
   build:
-    desc: Build the binary
+    desc: Build the binary (without signoff validation)
     cmds:
       - go build -o bin/{{.BINARY_NAME}} ./cmd/claude-hooks
+    sources:
+      - '**/*.go'
+    generates:
+      - bin/{{.BINARY_NAME}}
+
+  build:prod:
+    desc: Build the binary with signoff validation (uses git config for signoff)
+    vars:
+      GIT_NAME:
+        sh: git config user.name
+      GIT_EMAIL:
+        sh: git config user.email
+      SIGNOFF: '{{.GIT_NAME}} <{{.GIT_EMAIL}}>'
+    cmds:
+      - |
+        go build \
+          -ldflags="-X 'github.com/smykla-labs/claude-hooks/internal/validators/git.ExpectedSignoff={{.SIGNOFF}}'" \
+          -o bin/{{.BINARY_NAME}} \
+          ./cmd/claude-hooks
     sources:
       - '**/*.go'
     generates:
