feat(golangci): enable modernize and err113 linters
Enable the 'modernize' linter to enforce 'any' usage and other modern Go
features. Also enable 'err113' to enforce the sentinel error pattern.
Fixed comment alignment for 'err113' entry in .golangci.yml.
Corrected linter name from 'goerr113' to 'err113'.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -80,6 +80,8 @@ linters:
     - unparam        # Reports unused function parameters
     - usestdlibvars  # Detect possibility to use stdlib variables/constants
     - wastedassign   # Finds wasted assignment statements
+    - modernize      # Modernize Go code with 'any' and other features
+    - err113         # Enforce sentinel error pattern
 
   exclusions:
     rules:
@@ -205,6 +207,8 @@ linters:
     errcheck:
       check-type-assertions: true
       check-blank: false
+
+    modernize:
 
 formatters:
   enable:
