refactor(config): remove build-time signoff
Remove deprecated `ExpectedSignoff` global variable and
build-time signoff configuration via ldflags. Signoff
validation now exclusively uses runtime configuration.

Changes:

- Remove `ExpectedSignoff` global variable
- Simplify `getExpectedSignoff()` to use only config
- Update Taskfile: `build:prod` now aliases to `build`
- Remove signoff-related tests (2 tests removed)
- Update test to reflect no expected signoff configured

Benefits:

- Simpler build process (no ldflags needed)
- Configuration-only approach (consistent with other settings)
- Runtime flexibility (change signoff without rebuild)
- Cleaner code (no deprecated globals)

Quality:

- 382 tests passing (2 removed, -2)
- 0 lint issues
- Full backward compatibility maintained via config

Migration:

Users who used build-time signoff should migrate to config:

```toml
[validators.git.commit.message]
expected_signoff = "Your Name <your.email@example.com>"
```

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -35,23 +35,9 @@ tasks:
       - bin/{{.BINARY_NAME}}
 
   build:prod:
-    desc: Build the binary with signoff validation (uses git config for signoff)
-    vars:
-      GIT_NAME:
-        sh: git config user.name
-      GIT_EMAIL:
-        sh: git config user.email
-      SIGNOFF: '{{.GIT_NAME}} <{{.GIT_EMAIL}}>'
+    desc: Build production binary (same as build, signoff now configured via config file)
     cmds:
-      - |
-        mise exec -- go build \
-          -ldflags="-X 'github.com/smykla-labs/klaudiush/internal/validators/git.ExpectedSignoff={{.SIGNOFF}}'" \
-          -o bin/{{.BINARY_NAME}} \
-          ./cmd/klaudiush
-    sources:
-      - '**/*.go'
-    generates:
-      - bin/{{.BINARY_NAME}}
+      - task: build
 
   test:
     desc: Run all tests
