feat(validators): configurable PR markdown rules
Add `markdown_disabled_rules` config for PR body validation to control
which markdownlint rules are disabled.

Default: disable MD013 (line length), MD034 (bare URLs), MD041
(first line heading) for PR bodies.

Changes:

- Add `MarkdownDisabledRules` to `PRValidatorConfig`
- Update `ValidatePRMarkdown` to use disabled rules list
- Fix markdownlint CLI flags (separate --disable per rule)
- Fix markdownlint JSON config (comma placement)
- Fix error output (include stdout and stderr)
- Add config merging and defaults
- Update docs and examples

Config:

```toml
[validators.git.pr]
markdown_disabled_rules = ["MD013", "MD034", "MD041"]
```

Env var:

```bash
export KLAUDIUSH_VALIDATORS_GIT_PR_MARKDOWN_DISABLED_RULES=\
"MD013,MD034,MD041"
```

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/examples/config/full.toml
+++ b/examples/config/full.toml
@@ -53,6 +53,10 @@ require_changelog = false
 check_ci_labels = false
 require_body = false
 
+# Markdownlint rules to disable for PR body validation
+# Default: ["MD013", "MD034", "MD041"]
+markdown_disabled_rules = ["MD013", "MD034", "MD041"]
+
 # Git Branch Validator
 [validators.git.branch]
 enabled = true
