refactor(logger): migrate to slog
Replace custom FileLogger with slog-based SlogAdapter that maintains
the same Logger interface. Key changes:

- Add SlogAdapter wrapping *slog.Logger for standard library logging
- Create CustomHandler with same output format as old FileLogger
- Add Level enum with enumer code generation
- Support context-aware logging via FromContext/WithContext
- Maintain backward-compatible NewFileLogger/NewFileLoggerWithWriter

All existing code continues to work without modification due to the
preserved Logger interface contract.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -32,10 +32,12 @@ tasks:
     sources:
       - pkg/hook/context.go
       - pkg/config/types.go
+      - pkg/logger/level.go
     generates:
       - pkg/hook/eventtype_enumer.go
       - pkg/hook/tooltype_enumer.go
       - pkg/config/severity_enumer.go
+      - pkg/logger/level_enumer.go
 
   build:
     desc: Build the binary (without signoff validation)
