ci(security): add workflows and quality checks
- Add CI workflow (test, lint, build on PRs/pushes)
- Add CodeQL SAST analysis workflow
- Add OSSF Scorecard workflow
- Add dependency review workflow for PRs
- Add CODEOWNERS file for auto-review assignment
- Add README badges (CI, CodeQL, Scorecard, Go Report, License, Release)
- Configure Renovate for golangci-lint version sync between mise and CI
- Enable secret scanning, push protection, dependabot security updates
- Create branch ruleset for main branch protection

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,6 +3,7 @@
   "extends": [
     "config:best-practices",
     "helpers:pinGitHubActionDigests",
+    "customManagers:githubActionsVersions",
     ":semanticCommits",
     ":dependencyDashboard"
   ],
@@ -59,6 +60,14 @@
         "github-actions"
       ],
       "pinDigests": true
+    },
+    {
+      "description": "Group golangci-lint across mise and CI workflow",
+      "matchPackageNames": [
+        "golangci-lint",
+        "golangci/golangci-lint"
+      ],
+      "groupName": "golangci-lint"
     }
   ],
   "vulnerabilityAlerts": {
