--- a/.github/workflows/gemini-invoke.yml
+++ b/.github/workflows/gemini-invoke.yml
@@ -32,11 +32,11 @@ jobs:
     steps:
       - name: Mint identity token
         id: mint_identity_token
-        if: vars.APP_ID
+        if: vars.SMYKLOT_APP_ID
         uses: actions/create-github-app-token@a8d616148505b5069dccd32f177bb87d7f39123b # v2.1.1
         with:
-          app-id: ${{ vars.APP_ID }}
-          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          app-id: ${{ vars.SMYKLOT_APP_ID }}
+          private-key: ${{ secrets.SMYKLOT_PRIVATE_KEY }}
           permission-contents: read
           permission-issues: write
           permission-pull-requests: write
