--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -80,12 +80,13 @@ plugins:
         The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
         and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+  # Update version in nix/package.nix
+  - - '@semantic-release/exec'
+    - prepareCmd: sed -i 's/version = "[^"]*";/version = "${nextRelease.version}";/' nix/package.nix
+
   # Create git tag and GitHub release (GoReleaser handles the actual release)
   - - '@semantic-release/git'
     - assets:
         - CHANGELOG.md
+        - nix/package.nix
       message: 'chore(release): ${nextRelease.version} [skip ci]'
-
-  # Trigger GoReleaser via GitHub Actions
-  - - '@semantic-release/exec'
-    - publishCmd: echo "Release ${nextRelease.version} created. GoReleaser will handle binary builds."
