fix(shell): address backtick validator review
Address code review feedback:

- Use pointer types for `CheckUnquoted` and `SuggestSingleQuotes`
  config fields to distinguish unset (nil=true) from explicit false

- Add helper methods `CheckUnquotedOrDefault()` and
  `SuggestSingleQuotesOrDefault()` for safe access with defaults

- Refactor `analyzeBacktickContext()` to properly handle mixed quoting
  contexts by returning immediately when CmdSubst is found

- Split complex function into `analyzeWordPart()` and
  `analyzeDoubleQuoted()` to reduce cognitive complexity

- Update documentation comment to clarify default behavior

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/examples/config/comprehensive-backticks.toml
+++ b/examples/config/comprehensive-backticks.toml
@@ -11,7 +11,8 @@
 # When false, only validates git commit, gh pr create, gh issue create
 check_all_commands = true
 
-# Detect unquoted backticks (default: true in comprehensive mode)
+# Detect unquoted backticks (default: true)
+# Only applies when check_all_commands = true (comprehensive mode)
 # Examples:
 #   echo `date`           # Blocked
 #   ls `pwd`/files        # Blocked
