fix(brew): address PR #275 review comments
- Fix flake URL to include ?dir=nix subdirectory parameter
- Modernize Homebrew completions using generate_completions_from_executable DSL
- Add comprehensive Nix installation section to README

Signed-off-by: Marcin Skalski <skalskimarcin33@gmail.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -133,7 +133,7 @@ release:
     ```
 
     ### Nix
-    Available via nixpkgs or flake (`github:smykla-skalski/klaudiush`)
+    Available via nixpkgs or flake (`github:smykla-skalski/klaudiush?dir=nix`)
 
     ## Verification
 
@@ -174,11 +174,7 @@ brews:
 
     install: |
       bin.install "klaudiush"
-
-      # Generate and install shell completions
-      bash_completion.install Utils.safe_popen_read(bin/"klaudiush", "completion", "bash")
-      zsh_completion.install Utils.safe_popen_read(bin/"klaudiush", "completion", "zsh")
-      fish_completion.install Utils.safe_popen_read(bin/"klaudiush", "completion", "fish")
+      generate_completions_from_executable(bin/"klaudiush", "completion")
 
     test: |
       system "#{bin}/klaudiush", "--version"
