chore(release): add brew commit template
- Clear attribution for homebrew-tap updates
- Distinguishes from other projects (e.g., klab)

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -168,6 +168,7 @@ brews:
       branch: main
       token: "{{ .Env.GITHUB_TOKEN }}"
     directory: Formula
+    commit_msg_template: "chore(formula): update klaudiush to {{ .Tag }}"
     homepage: https://github.com/smykla-skalski/klaudiush
     description: "Validation dispatcher for Claude Code hooks"
     license: MIT
