ci(deps): upgrade golangci-lint to v2.10.1
- Bump GOLANGCI_LINT_VERSION 2.6.2 → 2.10.1 (Go 1.25.0 build,
  aligns with project's go 1.25.7)

- Add customManagers:githubActionsVersions to renovate.json so
  Renovate picks up the # renovate: comment before
  GOLANGCI_LINT_VERSION

- Configure sync-config.yml to manage renovate.json via org
  template merge, appending the customManagers preset and the
  go-git schedule rule as repo-specific overrides

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/.github/sync-config.yml
+++ b/.github/sync-config.yml
@@ -6,3 +6,21 @@
 sync:
   labels:
     allow_removal: true
+  files:
+    merge:
+      - path: renovate.json
+        arrayStrategies:
+          "$.extends": append
+          "$.packageRules": append
+        deduplicateArrays: true
+        overrides:
+          extends:
+            - "customManagers:githubActionsVersions"
+          packageRules:
+            - description: "Update go-git only on Monday mornings (using pinned commit SHAs as v6 is not yet GA)"
+              extends:
+                - "schedule:earlyMondays"
+              matchManagers:
+                - gomod
+              matchPackageNames:
+                - "github.com/go-git/go-git/v6"
