fix(lint): resolve modernize and ireturn issues
Replace ptrBool/boolPtr/intPtr helpers with new(T) per the modernize
linter newexpr check (Go 1.26). Remove now-unused helper functions and
stray //go:fix inline directives left by auto-fixer.

Add mapstructure to ireturn allow list: DecodeHookFunc is a named type
alias for any, but ireturn classifies external named types via the
SelectorExpr branch as NamedInterface rather than EmptyInterface, so
the empty allow rule does not match it. Config-level allow is the
correct fix, removing the nolint directives from unmarshaler.go.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -210,6 +210,14 @@ linters:
     nestif:
       min-complexity: 5
 
+    ireturn:
+      allow:
+        - anon
+        - error
+        - empty
+        - stdlib
+        - "github.com/go-viper/mapstructure"  # DecodeHookFunc is type alias for any; ireturn classifies named external aliases as NamedInterface, not EmptyInterface
+
     nolintlint:
       allow-unused: false
       require-explanation: true
