chore(lint): fix ireturn/nolintlint conflict
Add rules.Pattern to ireturn allow list instead of
using nolint directive that triggers nolintlint.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -217,6 +217,7 @@ linters:
         - empty
         - stdlib
         - "github.com/go-viper/mapstructure"  # DecodeHookFunc is type alias for any; ireturn classifies named external aliases as NamedInterface, not EmptyInterface
+        - "github.com/smykla-skalski/klaudiush/internal/rules.Pattern"  # polymorphic pattern (glob/regex) returned by CompilePattern
 
     nolintlint:
       allow-unused: false
