--- a/.golangci.yml
+++ b/.golangci.yml
@@ -218,6 +218,10 @@ linters:
         - stdlib
         - "github.com/go-viper/mapstructure"  # DecodeHookFunc is type alias for any; ireturn classifies named external aliases as NamedInterface, not EmptyInterface
         - "github.com/smykla-skalski/klaudiush/internal/rules.Pattern"  # polymorphic pattern (glob/regex) returned by CompilePattern
+        - "github.com/smykla-skalski/klaudiush/internal/rules.Matcher"  # polymorphic matcher returned by factory wrappers
+        - "github.com/smykla-skalski/klaudiush/internal/backup.Storage"  # storage provider returns interface for polymorphism
+        - "github.com/smykla-skalski/klaudiush/internal/plugin.Plugin"  # plugin loader returns interface by design
+        - "github.com/smykla-skalski/klaudiush/internal/tui.UI"  # TUI factory returns interface for fallback handling
 
     nolintlint:
       allow-unused: false
