fix(markdown): warn for cosmetic table issues
The markdown table validator (FILE005) was blocking agents too
aggressively. When an agent edited a single row, the validator
compared the entire table against an ideal padded format and
blocked with a generic message. The agent couldn't tell what
was wrong or how to fix it.

Split table issues into structural (column count mismatch,
missing cell padding) which still block, and cosmetic (column
width padding differences) which now warn. Edit fragments skip
cosmetic checks entirely since they may not see the full table.

Error messages are now specific (first warning line) instead of
generic "Markdown formatting errors". Table suggestions appear
in additionalContext so Claude actually sees the fix. New config
option table_formatting_severity lets users opt back into strict
blocking with "error".

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -222,6 +222,8 @@ linters:
         - "github.com/smykla-skalski/klaudiush/internal/backup.Storage"  # storage provider returns interface for polymorphism
         - "github.com/smykla-skalski/klaudiush/internal/plugin.Plugin"  # plugin loader returns interface by design
         - "github.com/smykla-skalski/klaudiush/internal/tui.UI"  # TUI factory returns interface for fallback handling
+        - "github.com/smykla-skalski/klaudiush/internal/doctor.Fixer"  # registry returns interface for polymorphic fixers
+        - "github.com/smykla-skalski/klaudiush/internal/validators/git.GitRunner"  # polymorphic git runner for SDK/CLI fallback
 
     nolintlint:
       allow-unused: false
