fix(config): deep merge preserves defaults
koanf's default merge replaces entire sub-maps when a
higher-priority source sets any key in a nested map.
Setting `[validators.file.markdown] enabled = true` in
project config wiped use_markdownlint, heading_spacing,
and all other defaults for that section.

Use koanf/maps.Merge as custom merge function for all
Load calls (TOML files, env vars, CLI flags) so nested
maps merge recursively instead of being replaced.

Also add GOTMPDIR workaround in .mise.toml for
CrowdStrike Falcon killing Go test binaries.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/.mise.toml
+++ b/.mise.toml
@@ -40,3 +40,7 @@ buf = "1.65.0"
 [env]
 # Ensure Go binaries are in PATH
 _.path = ["{{ env.HOME }}/.local/share/mise/installs/go/*/bin"]
+# CrowdStrike Falcon kills Go test binaries compiled in the default TMPDIR
+# (/var/folders/.../T/) because it scans new executables from temp dirs.
+# Redirect Go's temp build dir to avoid this.
+GOTMPDIR = "{{ env.HOME }}/.cache/go-tmp"
