--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,16 @@ jobs:
         run: go mod download
 
       - name: Run tests
-        run: go test -v -race -coverprofile=coverage.out ./...
+        run: |
+          # Testscript tests (cmd/klaudiush) use testscript.Main which copies the
+          # test binary to a temp dir. Under high parallel load, the binary becomes
+          # unavailable for some subtests. Run them separately to avoid this.
+          go test -v -race -coverprofile=coverage-main.out $(go list ./... | grep -v /cmd/klaudiush)
+          go test -v -race -coverprofile=coverage-cmd.out ./cmd/klaudiush
+          # Merge coverage profiles
+          head -1 coverage-main.out > coverage.out
+          tail -n +2 coverage-main.out >> coverage.out
+          tail -n +2 coverage-cmd.out >> coverage.out
 
       - name: Upload coverage
         uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
