--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,11 @@ on:
 
 permissions: {}
 
+env:
+  # Race-instrumented builds create large temp artifacts that can get
+  # corrupted in /tmp under parallel load. Use runner temp instead.
+  GOTMPDIR: /home/runner/work/_temp/go-tmp
+
 jobs:
   # Run tests first
   test:
@@ -34,6 +39,7 @@ jobs:
 
       - name: Run tests
         run: |
+          mkdir -p "$GOTMPDIR"
           # Testscript tests (cmd/klaudiush) use testscript.Main which copies the
           # test binary to a temp dir. Under high parallel load, the binary becomes
           # unavailable for some subtests. Run them separately to avoid this.
